# Deron---Delivery-Drone-Web

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  SECURITY.md  cong-nghe.html  cuu-tro-thien-tai.html  datcs.html  deron.html  gioi-thieu.html  index.html  lien-he.html  nguon-tham-khao.html  nhat-ky.html  package-lock.json  package.json  phap-ly.html  press.html  robots.txt  runtime-env.js  san-pham.html  sitemap.xml  tailwind.config.js  ung-dung.html  y-te-khan-cap.html
.github/workflows/: deploy-utm.yml  deploy.yml
admin/: config.yml  index.html
ai-knowledge/public/: README.md  (+7 more)
blog/: index.html
content/: blog-sidebar.json
datcs/: .env.example  README.md  index.html  overview.md
datcs/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
datcs/apps/desktop/src-tauri/capabilities/: desktop-capability.json
datcs/apps/desktop/src-tauri/src/: main.rs
datcs/src-backend/: .gitignore  Cargo.toml
datcs/src-backend/sql/: 001_init.sql
datcs/src-backend/src/: lib.rs  main.rs
datcs/src-backend/src/api/: mod.rs
datcs/src-backend/src/db/: mod.rs
datcs/src-backend/src/devices/: connection_manager.rs
datcs/src-backend/src/domain/: mod.rs
datcs/src-backend/src/services/: audit_service.rs  command_service.rs  device_session_service.rs  mission_service.rs  mod.rs  safety_service.rs  telemetry_service.rs
datcs/src-backend/src/state/: mod.rs
public/: datcs-install-i18n.js  index.html  manifest.json  share.html  translations.js
rust-web/: .env.example  .gitignore  Cargo.toml  Dockerfile  EQUIVALENCE_REPORT.md  IMPLEMENTATION_PLAN.md  MAPPING_TABLE.md  MIGRATION_BASELINE.md  ROUTES_AND_CONTRACTS.md  STACK_DECISION.md  TEST_PLAN.md  input.css  tailwind.config.js
rust-web/.github/workflows/: deploy.yml
rust-web/public/: manifest.json
rust-web/public/static/: style.css
rust-web/scripts/: build.sh  deploy.sh  dev.sh  test.sh
rust-web/src/: config.rs  error.rs  i18n.rs  main.rs  supabase.rs
scripts/: blog-post-template.html  build-blog.js
src/: App.css  App.js  App.test.js  MapWithCambayOverlay.js  firebase.js  index.css  setupTests.js
ung-dung/: cuu-tro-thien-tai.html  y-te-khan-cap.html
(+108 files in other folders)
