[package]
name = "datcs-backend"
version = "0.1.0"
edition = "2021"
description = "DATCS runtime foundation for Deron Air Traffic Control Station"
license = "Proprietary"

[dependencies]
actix-web = "4.11"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }

[[bin]]
name = "datcs-backend"
path = "src/main.rs"
