[package]
name = "datcs-desktop"
version = "0.1.0"
edition = "2021"
description = "DATCS Tauri desktop shell"
license = "Proprietary"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
datcs-backend = { path = "../../../src-backend" }

